--- a/css/styles.css
+++ b/css/styles.css
@@ -20,12 +20,12 @@
 /* - Portfolio                  */
 /* - Search                     */
 /* - Menu                       */
-/* - Slider                     */
+/* Slider                       */
 /* - Bx Slider                  */
 /* - Custom Scrollbar           */
 /* - Select Box styles          */
 /* - Full Width Page content    */
-/* - Homepage slider            */
+/* Homepage slider              */
 /* - Slide text colors          */
 /* - Slide Button colors        */
 /* Top Banner                   */
