--- a/css/layout/container.css
+++ b/css/layout/container.css
@@ -1,3 +1,9 @@
 ﻿/*******************************/
 /*     container styles        */
 /*******************************/
+@media screen and (max-width: 640px) {
+    .animate-initial {
+        animation: initial !important;
+    }
+}
+
