--- a/css/pages.css
+++ b/css/pages.css
@@ -10,3 +10,135 @@
 /********************/
 
 /*  home styles  */
+.home-slider .text h1 {
+    -webkit-animation-duration: 1.2s;
+    -moz-animation-duration: 1.2s;
+    -o-animation-duration: 1.2s;
+    animation-duration: 1.2s;
+}
+
+.home-slider .text .text-main {
+    -webkit-animation-duration: 1.2s;
+    -moz-animation-duration: 1.2s;
+    -o-animation-duration: 1.2s;
+    animation-duration: 1.2s;
+}
+
+.home-slider {
+    width: 100%;
+    height: 100%;
+}
+
+.carousal {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    position: relative;
+    background: #fff;
+    left: 0;
+    margin: 0 auto;
+    padding: 0;    
+    max-width: 100%;
+    -webkit-transform: translatez(0);
+    -moz-transform: translatez(0);
+    -ms-transform: translatez(0);
+    -o-transform: translatez(0);
+    transform: translatez(0);
+}
+
+/* Responsive */
+@media screen and (max-width: 640px) {
+    .slider-out, .home-slider, .slider-out .carousal {
+        height: auto !important;
+    }
+
+    .slider-out {
+        position: static;
+        padding-top: 198px;
+    }
+
+    .home-slider .cb-slideshow li span {
+        height: 300px;
+        animation: initial !important;
+        -webkit-animation: initial !important;
+        position: static;
+        display: block;
+        opacity: 1;
+    }
+
+    .picture-area, .caption-area, .sub-content .content-area {
+        width: 100%;
+    }
+
+    .picture-area {
+        display: none;
+    }
+
+    .caption-area:before {
+        display: none;
+    }
+
+    .slide-wrap, .caption-area {
+        height: auto;
+    }
+
+    .caption-area {
+        float: none;
+        width: 100%;
+        height: auto !important;
+    }
+
+    .slide-blue .caption-area {
+        background-color: rgba(63, 134, 200, 1);
+    }
+
+    .slide-green .caption-area {
+        background-color: rgba(91, 122, 21, 1);
+    }
+
+    .slide-red .caption-area {
+        background-color: rgba(192, 22, 27, 1);
+    }
+
+    .slide-purple .caption-area {
+        background-color: rgba(109, 62, 124, 1);
+    }
+
+    .slide-light-purple .caption-area {
+        background-color: rgba(144, 82, 121, 1);
+    }
+
+    .slide-dark-green .caption-area {
+        background-color: rgba(32, 84, 32, 1);
+    }
+
+    .slide-bottle-green .caption-area {
+        background-color: rgba(51, 155, 142, 1);
+    }
+
+    .caption-area {
+        padding: 30px 0;
+    }
+
+    .text-main p br {
+        display: none;
+    }
+
+    .text h1, .text h1 small {
+        font-size: 26px;
+    }
+
+    .button-wrap {
+        padding-top: 25px;
+    }
+
+    .caption-area > div {
+        position: static;
+        -moz-transform: translateY(0);
+        -ms-transform: translateY(0);
+        -webkit-transform: translateY(0);
+        transform: translateY(0);
+        top: 0;
+        padding: 0 25px;
+    }
+}
