--- a/css/base/index.css
+++ b/css/base/index.css
@@ -12,6 +12,10 @@
 .icon-block .material-icons {
 	font-size: inherit;
 }*/
+body {
+    font-family: 'Lato', sans-serif;
+}
+
 /*********/
 /* Fonts */
 /*********/
@@ -255,7 +259,11 @@
 /*********************/
 /* typography styles */
 /*********************/
-
+body {
+    color: #000000;
+    font-family: 'Lato', sans-serif;
+    font-size: 16px;
+}
 /***********//* helpers *//***********/.clearfix {
     zoom: 1;
 }
