--- a/css/base/typography.css
+++ b/css/base/typography.css
@@ -1,3 +1,8 @@
 ﻿/*********************/
 /* typography styles */
 /*********************/
+body {
+    color: #000000;
+    font-family: 'Lato', sans-serif;
+    font-size: 16px;
+}
