--- a/css/layout/header.css
+++ b/css/layout/header.css
@@ -1,3 +1,14 @@
 ﻿/********************************/
 /*       Header Styles          */
 /********************************/
+header {
+    background-color: #ffffff;
+    background-size: auto;
+}
+
+@media screen and (min-width: 600px) {
+    header {
+        background: url(../../img/top-shadow.png) no-repeat center top;
+        background-size: cover;
+    }
+}
