--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,10 @@
 .icon-block .material-icons {
 	font-size: inherit;
 }*/
+body {
+    font-family: 'Lato', sans-serif;
+}
+
 /*********/
 /* Fonts */
 /*********/
@@ -275,7 +279,11 @@
 /*********************/
 /* typography styles */
 /*********************/
-
+body {
+    color: #000000;
+    font-family: 'Lato', sans-serif;
+    font-size: 16px;
+}
 /***********//* helpers *//***********/.clearfix {
     zoom: 1;
 }
@@ -303,14 +311,93 @@
 /**********************/
 /*    nav styles      */
 /**********************/
-.phone-box a i {
-    width: 56px;
+nav {
+    background-color: #9bcbc2;
+    margin-bottom: 30px;
+    height: 60px;
+    min-width: 360px;
+}
+
+.mobile-nav-bar a.phone-box {
+    float: left;
+    padding: 17px 20px;
+    color: #005248;
+
+    font-size: 16px;
+    line-height: 24px;
+    height: 24px;
+    text-decoration: none;
+    background: transparent;
+    cursor: pointer;
+}
+
+.mobile-nav-bar a.phone-box .fa {
+    color: #005248;
+    font-size: 20px;
+    line-height: 20px;
+    height: 20px;
+    text-align: center;
+    margin: 2px 3px 0 0;
+    position: relative;
+    top: 1px;
+}
+
+.mobile-nav-bar a.menu-icon {
+    color: #ffffff;
+    background: #005248;
+    display: block;
+    text-align: right;
+    float: right;
+    padding: 0 20px 0 30px;
+    height: 60px;
+    width: auto;
+    text-transform: uppercase;
+    font-size: 19px;
+    line-height: 60px;
+    position: relative;
+    vertical-align: middle;
+    cursor: pointer;
+    margin: 0;
+}
+
+.mobile-nav-bar a.menu-icon .fa {
+    margin: 0 0 0 15px;
+}
+
+.side-nav {
+    background: #005248;
+}
+
+.side-nav .side-nav-title {
     text-align: center;
 }
+
+.side-nav .side-nav-title, .side-nav ul li a {
+    color: #ffffff;
+    font-size: 16px;
+}
+
+@media screen and (min-width: 601px) {
+    nav {
+        background-color: transparent;
+    }
+}
+
 
 /********************************/
 /*       Header Styles          */
 /********************************/
+header {
+    background-color: #ffffff;
+    background-size: auto;
+}
+
+@media screen and (min-width: 600px) {
+    header {
+        background: url(../img/top-shadow.png) no-repeat center top;
+        background-size: cover;
+    }
+}
 
 /*****************************/
 /*      Content Styles       */
